# fae

./: .gitignore  Cargo.toml  ISSUES.md  LICENSE.md  PRE_0.5.0_CHECKED_FILES.md  README.md  ROADMAP.md  build.rs
examples/: automated_bench.rs  basic.rs  benchmarker.rs  benchmarker_glfw.rs  counter.rs  drawing_order.rs  font8x8_glyphs.rs  glfw.rs  glutin.rs  pixel_perfect.rs  sdf.rs  sdl.rs  simple.rs  text_layout.rs  text_layout_testing.rs
examples/common/: mod.rs
examples/counter/: main.rs
examples/counter_manual_layout/: main.rs
examples/counter_with_layout/: main.rs
examples/custom_sprite_demo/: main.rs
examples/res/: sdf_shader.frag
examples/simple/: main.rs
examples/text_demo/: main.rs
src/: error.rs  frame_timer.rs  gl_version.rs  graphics_context.rs  image.rs  lib.rs  profiler.rs  rect.rs  renderable.rs  renderer.rs  shaders.rs  sprite.rs  tests.rs  text.rs  text_dummy.rs  text_layout.rs  text_rusttype.rs  types.rs  ui.rs  window.rs  window_dummy.rs  window_glfw.rs  window_glutin.rs  window_settings.rs
src/api/: draw_call.rs  draw_call_handle.rs  font.rs  font_handle.rs  graphics_context.rs  mod.rs  spritesheet.rs  window.rs
src/clip/: actual.rs  mod.rs  placeholder.rs
src/error/: fae_error.rs  glutin_error.rs  image_creation_error.rs  image_png_error.rs  mod.rs
src/renderer/: mod.rs  text.rs
src/resources/: mod.rs
src/shaders/: mod.rs  texquad.frag  texquad.vert  text.frag  text.vert
src/shaders/legacy/: texquad.frag  texquad.vert  text.frag
src/text/: glyph_cache.rs  layout.rs  mod.rs  text_builder.rs  types.rs
src/text/fonts/: dummy.rs  font8x8.rs  mod.rs  rusttype.rs
src/ui/: element.rs  keyboard.rs  layout.rs  mod.rs
src/ui/element/: input.rs  mod.rs
src/window/: frame_timer.rs  mod.rs  mouse.rs  util.rs  window_dummy.rs  window_glfw.rs  window_glutin.rs  window_util.rs
