[package]
name = "fae"
version = "0.5.0-alpha.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "A simple and fast 2D rendering crate with optional window creation and text rendering functionality."
readme = "README.md"
# Since the crate isn't ready for usage, don't set these just yet.
# keywords = ["graphics", "2d", "renderer", "sprite"]
# categories = ["rendering", "rendering::engine"]
license = "MIT"
repository = "https://github.com/neonmoe/fae"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Glutin depends on andrew on linux, which depends on rusttype 0.7.9,
# which depends on rusttype ^0.8, so this should match that. No dupes.
rusttype = { version = "0.8.1", optional = true }
# And rusttype 0.8.1 depends on this version of stb_truetype, and
# we need to explicitly depend on it to be able to use its types.
stb_truetype = { version = "^0.3", optional = true}
# *sigh*

# Now, the normal [dependencies] section
log = "^0.4.8"
glutin = "^0.21.1"
fnv = { version = "^1.0.6", optional = true }
png = { version = "^0.15.0", optional = true }
font8x8 = { version = "^0.2.5", optional = true, default_features = false, features = ["std"] }
lazy_static = { version = "^1.4.0", optional = true }

[features]
default = []
text = ["fnv"]
profiler = ["lazy_static"]
ttf = ["rusttype", "stb_truetype"]

[dev-dependencies]
env_logger = "^0.7.1"
cfg-if = "^0.1.10"
font-loader = "^0.8.0"

[build-dependencies]
gl_generator = "^0.11.0"

[[example]]
name = "basic"
required-features = ["png", "text", "ttf"]

[[example]]
name = "benchmarker"
required-features = ["png", "text", "ttf"]

[[example]]
name = "drawing_order"
required-features = ["png", "text", "ttf"]

[[example]]
name = "pixel_perfect"
required-features = ["png", "text", "font8x8"]

[[example]]
name = "text_layout"
required-features = ["text", "ttf"]

[profile.release]
debug = true
