[package]
name = "fae"
version = "0.6.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "A simple and fast 2D rendering crate with optional window creation and text rendering functionality."
readme = "README.md"
# Since the crate isn't ready for usage, don't set these just yet.
# keywords = ["graphics", "2d", "renderer", "sprite"]
# categories = ["rendering", "rendering::engine"]
license = "MIT"
repository = "https://github.com/neonmoe/fae"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Glutin depends on andrew on linux, which depends on rusttype 0.7.9,
# which depends on rusttype ^0.8, so this should match that. No dupes.
rusttype = { version = "^0.8.2", optional = true }
# And rusttype 0.8.2 depends on this version of stb_truetype, and
# we need to explicitly depend on it to be able to use its types.
stb_truetype = { version = "^0.3.1", optional = true}
# *sigh*

# Now, the normal [dependencies] section
log = "^0.4.8"
fnv = { version = "^1.0.6", optional = true }
png = { version = "^0.15.3", optional = true }
font8x8 = { version = "^0.2.5", optional = true, default_features = false, features = ["std"] }
lazy_static = { version = "^1.4.0", optional = true }

[features]
default = []
text = ["fnv"]
profiler = ["lazy_static"]
ttf = ["rusttype", "stb_truetype"]

[dev-dependencies]
cfg-if = "^0.1.10"
font-loader = "^0.8.0"
glutin = "^0.23.0"
sdl2 = { version = "^0.33.0", features = ["static-link", "bundled"] }
glfw = "^0.36.0"

[build-dependencies]
gl_generator = "^0.14.0"

[[example]]
name = "glutin"
required-features = ["text"]

[[example]]
name = "sdl"
required-features = ["text"]

[package.metadata.docs.rs]
all-features = true