[package]
name = "fae"
version = "0.7.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "A simple and fast 2D rendering crate with optional window creation and text rendering functionality."
readme = "README.md"
# Since the crate isn't ready for usage, don't set these just yet.
# keywords = ["graphics", "2d", "renderer", "sprite"]
# categories = ["rendering", "rendering::engine"]
license = "MIT"
repository = "https://github.com/neonmoe/fae"

[badges]
maintenance = { status = "experimental" }

[dependencies]
rusttype = { version = "^0.9.2", optional = true }
# owned_ttf_parser is for types used in rusttype
owned_ttf_parser = { version = "^0.6.0", optional = true}
log = "^0.4.11"
gl = "0.14.0"
fnv = { version = "^1.0.7", optional = true }
png = { version = "^0.16.7", optional = true }
font8x8 = { version = "^0.2.5", optional = true, default_features = false, features = ["std"] }
lazy_static = { version = "^1.4.0", optional = true }

[features]
default = []
text = ["fnv"]
profiler = ["lazy_static"]
ttf = ["rusttype", "owned_ttf_parser"]

[dev-dependencies]
cfg-if = "^0.1.10"
font-loader = "^0.8.0"
glutin = "^0.23.0"
sdl2 = { version = "^0.33.0", features = ["static-link", "bundled"] }
glfw = "^0.36.0"

[[example]]
name = "glutin"
required-features = ["text"]

[[example]]
name = "sdl"
required-features = ["text"]

[package.metadata.docs.rs]
all-features = true